--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,18 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <header>
+    <nav class="navbar navbar-light bg-faded">
+      <div class="nav navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Events</a>
+        <a class="nav-item nav-link" href="#">Other1</a>
+        <a class="nav-item nav-link" href="#">Other2</a>
+      </div>
+    </nav>
+  </header>
+  <div class="container">
+    <app-root>Loading...</app-root>
+  </div>
 </body>
 </html>
