added quick and dirty bootstrap footer

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,45 @@
       </div>
     </nav>
   </header>
-  <div class="container">
+  <div class="container mt-1 mb-1">
     <app-root>Loading...</app-root>
   </div>
 </body>
+<footer class="card-footer">
+  <div class="container">
+    <div class="col-sm-4">
+      <div class="card-block">
+        <h3 class="card-header">Lorem ipsum</h3>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
+    </div>
+    <div class="col-sm-4">
+      <div class="card-block">
+        <h3 class="card-header">Lorem ipsum</h3>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
+    </div>
+    <div class="col-sm-4">
+      <div class="card-block">
+        <h3 class="card-header">Lorem ipsum</h3>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
+    </div>
+  </div>
+</footer>
 </html>
